# ConcurrencyError

./: CMakeLists.txt  README.md
CUDA/: CMakeLists.txt
CUDA/testAtomic/: testAtomic.cu
CUDA/testWarp/: testWarp.cu
Modules/: FindClang.cmake  Util.cmake
OpenMP/: CMakeLists.txt
OpenMP/testAtomic/: testAtomic.c
OpenMP/testBarrier/: testBarrier.c
OpenMP/testBarrierDivergence/: testBarrierDivergence.c
OpenMP/testCritical/: testCritical.c
OpenMP/testData/: testData.c  testData.s
OpenMP/testLock/: testLock.c
OpenMP/testLock2/: testLock2.c
OpenMP/testPC/: testPC.c
OpenMP/testPC2/: testPC2.c
OpenMP/testStatic1/: testStatic1.c
OpenMP/testWarp/: testWarp.c
