set(CMAKE_C_COMPILER clang)
set(GROUP_NAME OpenMP)
include(FindOpenMP)
if(OpenMP_FOUND)
    set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}})
endif()
#file(GLOB SUBDIR_LIST RELATIVE ${CMAKE_CURRENT_SOURCE_DIR})
macro(listSubDir RESULT ROOT_PATH)
    file(GLOB FILES RELATIVE ${ROOT_PATH} *)
    set(${RESULT} "")
    foreach(FILE_NAME ${FILES})
        if(IS_DIRECTORY "${ROOT_PATH}/${FILE_NAME}")
            list(APPEND ${RESULT} ${FILE_NAME})
        endif()
    endforeach()
endmacro()

set(SUBDIR_LIST "")
listSubDir(SUBDIR_LIST ${CMAKE_CURRENT_SOURCE_DIR})
foreach(DIR ${SUBDIR_LIST})
    message("${DIR}")
    file(GLOB SRCS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${DIR}/*.c)   
    message(${SRCS})
    add_executable(${DIR} ${SRCS})
endforeach()
