set(CMAKE_C_COMPILER clang)
set(GROUP_NAME OpenMP)
#include(FindOpenMP)
find_package(OpenMP REQUIRED)
find_package(CUDA REQUIRED)
if(OpenMP_FOUND)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
endif()
#file(GLOB SUBDIR_LIST RELATIVE ${CMAKE_CURRENT_SOURCE_DIR})
set(TARGET_OPTION "-fopenmp-targets=nvptx64-nvidia-cuda --cuda-path=${CUDA_TOOLKIT_ROOT_DIR}")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${TARGET_OPTION}")

macro(listSubDir RESULT ROOT_PATH)
    file(GLOB FILES RELATIVE ${ROOT_PATH} *)
    set(${RESULT} "")
    foreach(FILE_NAME ${FILES})
        if(IS_DIRECTORY "${ROOT_PATH}/${FILE_NAME}")
            list(APPEND ${RESULT} ${FILE_NAME})
        endif()
    endforeach()
endmacro()

set(SUBDIR_LIST "")
listSubDir(SUBDIR_LIST ${CMAKE_CURRENT_SOURCE_DIR})
foreach(DIR ${SUBDIR_LIST})
    file(GLOB SRCS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${DIR}/*.c)   
    add_executable(${DIR} ${SRCS})
endforeach()
